added oracle missed votes window and missed blocks window on grafana dashboard #LSC-169
