# swagger.bombay.yaml
@@ -11,6 +11,122 @@ securityDefinitions:
     type: basic
 
 paths:
+  /cosmos/slashing/v1beta1/params:
+    get:
+      summary: Params queries the parameters of slashing module
+      operationId: SlashingParams
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              params:
+                type: object
+                properties:
+                  signed_blocks_window:
+                    type: string
+                    format: int64
+                  min_signed_per_window:
+                    type: string
+                  downtime_jail_duration:
+                    type: string
+                  slash_fraction_double_sign:
+                    type: string
+                  slash_fraction_downtime:
+                    type: string
+                description: Params represents the parameters used for by the slashing module.
+            title: QueryParamsResponse is the response type for the Query/Params RPC method
+        default:
+          description: An unexpected error response
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    type_url:
+                      type: string
+                    value:
+                      type: string
+                      format: byte
+      tags:
+        - Query
+  /terra/oracle/v1beta1/params:
+    get:
+      summary: Params queries all parameters.
+      operationId: OracleParams
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              params:
+                description: params defines the parameters of the module.
+                type: object
+                properties:
+                  vote_period:
+                    type: string
+                    format: uint64
+                  vote_threshold:
+                    type: string
+                  reward_band:
+                    type: string
+                  reward_distribution_window:
+                    type: string
+                    format: uint64
+                  whitelist:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        name:
+                          type: string
+                        tobin_tax:
+                          type: string
+                      title: Denom - the object to hold configurations of each denom
+                  slash_fraction:
+                    type: string
+                  slash_window:
+                    type: string
+                    format: uint64
+                  min_valid_per_window:
+                    type: string
+            description: QueryParamsResponse is the response type for the Query/Params RPC method.
+        default:
+          description: An unexpected error response
+          schema:
+            type: object
+            properties:
+              error:
+                type: string
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    type_url:
+                      type: string
+                    value:
+                      type: string
+                      format: byte
+      tags:
+        - Query
   /cosmos/slashing/v1beta1/signing_infos/{cons_address}:
     get:
       summary: SigningInfo queries the signing info of given cons address
